add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/AlgorithmAnalysis)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/C-Primer)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/CPP-PL)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/FromAsmToC-Cpp)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/CppNow)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/Test_environment)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/CppConcurrent)